instance test and ES6 module type in package.json

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <script src="modules/boid.js"></script>
+    <script src="modes/pointer-flocking.js"></script>
+    <script src="modes/instance-test.js"></script>
     <script src="sketch.js"></script>
+
+    <div id="test"></div>
   </body>
 </html>
